# fs-racing-line-optimizer

./: .flake8  .gitignore  IMPROVEMENTS_SUMMARY.md  Makefile  README.md  debug_divergence.py  debug_stanley_detailed.py  main.py  pyproject.toml  requirements.txt  setup.py  test_stanley_bug.py
.github/workflows/: ci.yml
data/: sample_cones.json
docs/: design_notes.md  roadmap.md  ros2_topics.md
fmsim/: __init__.py  imu.py  models.py  planner.py  planner_fallback.py  ros2_interface.py  ui.py  utils.py
scripts/: sim_headless.py
src/components/Scene/: OrbitCanvas.tsx
tests/: conftest.py  test_controller.py  test_models_extended.py  test_planner.py  test_planner_extended.py  test_stanley_convergence.py  test_stanley_regression.py  test_utils.py
