[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmsim"
version = "0.1.0"
description = "Formula Student cone-track planner and simulator using a least-curvature proxy."
readme = "README.md"
requires-python = ">=3.7"
authors = [{name = "FS Racing Line Team"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.22",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
include = ["fmsim", "fmsim.*"]

[tool.flake8]
max-line-length = 100
extend-ignore = "E203,W503"
exclude = ".venv"
